# rag_chatbot_demo

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  agent_tools.py  db.py  docker_build.sh  docker_start.sh  embedder.py  generator.py  legacy_db.py  main.py  parser.py  preload_models.py  pyproject.toml  retriever.py
backend/chroma_data/: chroma.sqlite3
backend/tests/: test_parser.py  test_versioning_logic.py
beakr-takehome/: README.md  package.json  pnpm-lock.yaml
beakr-takehome/app/: page.tsx
