[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "docling>=2.80.0",
    "fastapi[standard]>=0.135.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "pytest>=9.0.2",
]
